# oracle_investmen_aktarma_deneme00

./: .env.example  .gitignore  .replit  Dockerfile  Proje_system_instruction_dosyasi_proje_benim_isterlerim  main.py  oracle_config.yaml  pyproject.toml  replit.md  requirements.txt  test_fixes.py
.agents/memory/: MEMORY.md  conversation-context.md  free-apis.md  gemini-quirks.md  groq-llm-setup.md  intent-routing.md  llm-resiliency.md  quant-signal-engine.md
agents/: __init__.py  agent_delta.py  fundamental_filter.py  macro_sentinel.py  quant_engine.py  red_team.py  sentiment_reader.py  the_oracle.py  whale_hunter.py
attached_assets/: Pasted--SYSTEM-DIRECTIVE-ORACLE-MASTER-SWARM-ECOSYSTEM-V4-0-EX_1781185699909.txt  Pasted--benim-istedi-im-ey-tam-olarak-u-ve-bunu-bir-ekilde-her_1781245869859.txt  Pasted--start-MARKETING-AJAN-AKT-F-Hedef-sekt-r-b-lge-ve-amac-_1781246142007.txt  Pasted-peki-sistem-uanda-benim-a-a-da-ki-istek-talep-d-nce-fik_1781245860739.txt
bot/: __init__.py  telegram_handler.py
core/: __init__.py  backtest_rsi_obv.py  backtester.py  config.py  console.py  diagnostic.py  graph.py  indicators.py  scanner.py  threshold_calibrator.py  tracker.py  types.py  weight_optimizer.py
data/: backtest_history.csv  diagnostic_run.csv  optimal_weights.json  threshold_recommendations.json
oracle-swarm/: main.py  requirements.txt
oracle-swarm/agents/: ceo_router.py  edge_daemon.py  freelancer.py  hft_quant.py  marketing.py  swe_engineer.py
oracle-swarm/bot_handler/: bot.py  keyboards.py
oracle-swarm/core/: config.py  (+5 more)
tools/: llm_engine.py  market_data.py
(+3 files in other folders)
