[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "apscheduler>=3.11.2",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.7",
    "langchain-core>=1.4.6",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "python-telegram-bot>=22.7",
    "redis>=8.0.0",
    "reportlab>=4.5.1",
    "supabase>=2.31.0",
    "ta>=0.11.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
    "yfinance>=1.4.1",
]
